fix: Fix web UI responsive layout on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -534,3 +534,4 @@ body {
 
 /* Updated: 2026-01-03 */
 .updated-323 { opacity: 1; }
+.updated-117 { opacity: 1; }
